fixing button alignment

--- a/src/main/resources/static/css/lyric-master.css
+++ b/src/main/resources/static/css/lyric-master.css
@@ -82,3 +82,7 @@
 .title{
     display: none;
 }
+
+#badgeEarned{
+    display: none;
+}
